RE RE RE fix scrollbars

--- a/_sass/quarkus.scss
+++ b/_sass/quarkus.scss
@@ -221,6 +221,14 @@ table code {
   background-color: transparent;
 }
 
+.quarkus-homepage .tabs pre.highlight {
+ overflow: auto;
+}
+
+.quarkus-homepage .tab {
+ overflow: hidden !important;
+}
+
 hr {
   border-width: 1px;
   border-color: $cyan;
